--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,13 +1,19 @@
 {
-    "compilerOptions": {
-      "baseUrl": "src",
-      "paths": {
-        "@styles/*": ["styles/*"],
-        "@common/*": ["common/*"],
-        "@components/*": ["components/*"],
-        "@layout/*": ["layout/*"],
-        "@hooks/*": ["hooks/*"],
-        "@services/*": ["services/*"]
-      }
-    }
+  "compilerOptions": {
+    "target": "es5",
+    "module": "esnext",
+    "baseUrl": "./",
+    "moduleResolution": "node",
+    "paths": {
+      "@/*": [
+        "src/*"
+      ]
+    },
+    "lib": [
+      "esnext",
+      "dom",
+      "dom.iterable",
+      "scripthost"
+    ]
   }
+}
