--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "dev": "vue-cli-service serve --mode dev"
   },
   "dependencies": {
+    "@mdi/font": "^5.9.55",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "crypto-js": "^4.1.1",
     "register-service-worker": "^1.7.2",
     "roboto-fontface": "*",
     "vue": "^2.6.14",
+    "vue-material": "^1.0.0-beta-15",
     "vue-router": "^3.5.1",
     "vue-toastification": "^1.7.14",
     "vuetify": "^2.6.0",
