--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
     "dev": "vue-cli-service serve --mode dev"
   },
   "dependencies": {
+    "@digitalpersona/authentication": "^0.2.6",
+    "@digitalpersona/core": "^0.2.6",
+    "@digitalpersona/devices": "^0.2.6",
+    "@digitalpersona/enrollment": "^0.2.9",
+    "@digitalpersona/services": "^0.2.8",
     "@mdi/font": "^5.9.55",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "crypto-js": "^4.1.1",
     "register-service-worker": "^1.7.2",
     "roboto-fontface": "*",
+    "tslib": "^2.4.0",
     "vue": "^2.6.14",
     "vue-material": "^1.0.0-beta-15",
     "vue-router": "^3.5.1",
