--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "crypto-js": "^4.1.1",
+    "gsap": "^3.10.4",
     "register-service-worker": "^1.7.2",
     "roboto-fontface": "*",
     "tslib": "^2.4.0",
