--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "vue-router": "^3.5.1",
     "vue-toastification": "^1.7.14",
     "vuetify": "^2.6.0",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "xlsx": "^0.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
