--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "core-js": "^3.8.3",
     "crypto-js": "^4.1.1",
     "gsap": "^3.10.4",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.25",
     "register-service-worker": "^1.7.2",
     "roboto-fontface": "*",
     "tslib": "^2.4.0",
